# GildedRose-Refactoring-Kata-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  casos_de_uso.md  gilded_rose.py  gilded_rose_sp_in_progress.py  item.py  pyproject.toml  requirements.txt  texttest_fixture.py
.github/workflows/: tests.yml
docs/: casos_de_uso.md
gilded_rose/: __init__.py  constants.py  core.py
scripts/: texttest_fixture.py
tests/: conftest.py  test_conjured.py  test_gilded_rose_approvals.py  test_gilded_rose_detailed.py
tests/approved_files/: test_gilded_rose_approvals.test_gilded_rose_approvals.approved.txt
tests/integration/: test_gilded_rose_approvals.py  test_gilded_rose_approvals.test_gilded_rose_approvals.approved.txt
tests/unit/: test_conjured.py  test_gilded_rose.py  test_gilded_rose_detailed.py  test_properties.py  test_validation.py
