[project]
name = "gilded-rose-refactoring"
version = "0.1.0"
description = "Gilded Rose Refactoring Kata - Python"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
    "approvaltests>=14.0.0",
    "pytest-approvaltests>=0.2.3",
    "coverage>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mutmut >=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "tests/approved_files/",
    "*.txt",
    "*.md",
    "htmlcov/",
    "__pycache__/",
    ".venv/",
    ".git/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"texttest_fixture.py" = ["F403", "F405"]  # Legacy code with star imports

[tool.ruff.format]
exclude = [
    "tests/approved_files/",
    "*.txt",
    "*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=gilded_rose",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mutmut]
paths_to_mutate = ["gilded_rose/"]
backup = false
runner = "python -m pytest tests/unit -x --ff -q"
# tests_dir = "tests/"

[tool.coverage.run]
source = ["gilded_rose"]
omit = [
    "tests/*",
    ".venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["gilded_rose.py", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
pythonVersion = "3.10"  # O
